# sentomeglio

./: .gitignore
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/sentomeglio/app/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: DNS4.onnx  T3_MID_BASE.onnx
android/app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  SimpleResampler.cpp  SimpleResampler.h  StreamingOnnxEnhancer.cpp  StreamingOnnxEnhancer.h  native-lib.cpp
android/app/src/main/java/com/sentomeglio/app/: AppPreferences.kt  AudioService.kt  DailyScreenManager.kt  DevScreenManager.kt  MainActivity.kt  NativeBridge.kt  SettingsActivity.kt  SpectrogramView.kt  WaveformView.kt
android/app/src/main/res/drawable/: bg_card.xml  bg_dev_badge.xml  bg_dev_icon.xml  bg_input_field.xml  bg_rec_dev_idle.xml  bg_rec_dev_recording.xml  bg_rec_idle.xml  bg_rec_recording.xml  bg_spinner.xml  ic_arrow_back.xml  ic_check.xml  ic_dev.xml  ic_folder.xml  ic_mic.xml  ic_settings.xml  ic_stop.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  layout_daily.xml  layout_dev.xml  layout_toolbar_title.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml  themes.xml
android/app/src/test/java/com/sentomeglio/app/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: MANUALE.md
